Closed Bug 457784 Opened 17 years ago Closed 17 years ago

Turning autosync_offline_stores pref off doesn't turn auto-sync off for offline INBOXs

Categories

(MailNews Core :: Backend, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0b1

People

(Reporter: bugmil.ebirol, Assigned: bugmil.ebirol)

Details

Attachments

(1 file)

Turning mail.server.default.autosync_offline_stores off doesn't turn auto-sync completely off for **offline INBOX** folders. When autosync_offline_stores is false, it prevents auto-sync from updating folders and iterating through the existing headers during idle time, but doesn't prevent it from downloading pending messages of offline INBOX folders. As a result, unless the user sets INBOX not-offline explicitly, auto-sync keeps downloading pending messages behind the scene as they show up on the server. This is only true for INBOX folders, auto-sync treats other folders as expected by not downloading their messages. The root of the problem is the following test statement in nsImapMailFolder::HeaderFetchCompleted: > if (autoSyncOfflineStores || mFlags & nsMsgFolderFlags::Inbox) It creates a hole in the logic when the folder is INBOX, and auto-sync patch doesn't closes it.
Flags: blocking-thunderbird3?
Attached patch proposed fix 1Splinter Review
We download the message bodies if either autosync_offline_stores or download_bodies_on_get_new_mail is true.
Attachment #341042 - Flags: review?(bienvenu)
Attachment #341042 - Flags: review?(bienvenu) → review+
Comment on attachment 341042 [details] [diff] [review] proposed fix 1 I forgot to ask for sr, doing now.
Attachment #341042 - Flags: superreview?(bienvenu)
Attachment #341042 - Flags: superreview?(bienvenu) → superreview+
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Flags: blocking-thunderbird3? → blocking-thunderbird3+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: