Bug 457784 - Turning autosync_offline_stores pref off doesn't turn auto-sync off for offline INBOXs, r+sr=bienvenu